--- a/manifest.yaml
+++ b/manifest.yaml
@@ -10,7 +10,7 @@ builder:
     JFROG_URL: artifactory.bion.tech
 
 spec: 
-  operator: jax 
+  operator: jax  r
   image: image
   command: "python3 -u main.py --operator=jax --sleep=30 --tb-write=true" 
  
