--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,7 +3,7 @@ apiVersion: 0.2.2
 
 builder:
   image: image
-  dockerfile: ./dockerfiles/Dockerfile
+  dockerfile: ./Dockerfile
   context: .  
   buildArgs: 
     JFROG_BASE_REPOSITORY: aichor-dev-docker
