--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,4 +1,4 @@
-kind: AIchorManifest
+kind: AIchorManifest 
 apiVersion: 0.2.2
 
 builder:
@@ -9,35 +9,21 @@ builder:
     JFROG_BASE_REPOSITORY: aichor-dev-docker
     JFROG_URL: artifactory.bion.tech 
 
-spec:
-  operator: ray 
-  image: image
-  command: "python3 -u main.py --operator=ray --sleep=300 --tb-write=True"
-
+spec: 
+  operator: tf
+  image: image  
+  command: "python3 -u main.py --operator=tf --sleep=250 --tb-write=true"  
+ 
   tensorboard:
     enabled: true
-
-  types: 
-    Head:
+   
+  types:
+    Worker:
+      count: 1 
       resources:
         cpus: 1
         ramRatio: 2 
-        accelerators: # optional
-          gpu:
-            count: 0
-            product: a10g
-            type: gpu
-
-    Job:
-      resources:
-        cpus: 1
-        ramRatio: 2
         shmSizeGB: 0
-
-    Workers:
-      - name: cpu-workers
-        count: 1
-        resources:
-          cpus: 1
-          ramRatio: 2
-          shmSizeGB: 0
+        accelerators: # optional
+          gpu: 
+            count: 0   
