exp test kuberay after refactor repo

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,33 +1,35 @@
-kind: AIchorManifest 
+kind: AIchorManifest
 apiVersion: 0.2.2
 
 builder:
   image: image
-  dockerfile: ./Dockerfile
-  context: .   
+  dockerfile: ./build/ray.Dockerfile
+  context: .
   buildArgs:  
     JFROG_BASE_REPOSITORY: aichor-dev-docker
     JFROG_URL: artifactory.bion.tech
 
 spec:
-  operator: jobset 
+  operator: kuberay
   image: image
-  command: "python3 -u main.py --operator=jobset --sleep=300 --tb-write=True"
+  command: "python3 -u main.py --operator=kuberay --sleep=300 --tb-write=True"
+
+  debug:
+    jupyter: false
 
   tensorboard:
     enabled: true
 
   types:
-    master:
-      count: 1
+    Head:
       resources:
         cpus: 1
         ramRatio: 2
-        shmSizeGB: 0
-    worker:
-      count: 1
-      resources:
-        cpus: 1
-        ramRatio: 2
-        shmSizeGB: 0
 
+    Workers:
+      - name: cpu-workers
+        count: 1
+        resources:
+          cpus: 1
+          ramRatio: 2
+          shmSizeGB: 0
